refactor: 테스트 픽스처를 사용하도록 테스트코드 리팩토링