@@ -1,17 +1,27 @@
 package kitchenpos.application;
 
+import static kitchenpos.fixture.MenuFixture.createMenu;
+import static kitchenpos.fixture.MenuGroupFixture.createMenuGroup;
+import static kitchenpos.fixture.MenuProductFixture.createMenuProduct;
+import static kitchenpos.fixture.OrderFixture.createOrder;
+import static kitchenpos.fixture.OrderLineItemFixture.createOrderLineItem;
+import static kitchenpos.fixture.OrderTableFixture.createOrderTable;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
+import kitchenpos.dao.MenuDao;
+import kitchenpos.dao.MenuGroupDao;
 import kitchenpos.dao.OrderDao;
+import kitchenpos.dao.OrderTableDao;
 import kitchenpos.domain.Menu;
 import kitchenpos.domain.MenuGroup;
-import kitchenpos.domain.MenuProduct;
 import kitchenpos.domain.Order;
-import kitchenpos.domain.OrderLineItem;
+import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -27,35 +37,33 @@ class OrderServiceTest {
     private OrderService orderService;
 
     @Autowired
-    private TableService tableService;
-
-    @Autowired
-    private MenuGroupService menuGroupService;
-
-    @Autowired
-    private MenuService menuService;
-
-    @Autowired
     private OrderDao orderDao;
+
+    @Autowired
+    private MenuDao menuDao;
+
+    @Autowired
+    private OrderTableDao tableDao;
+
+    @Autowired
+    private MenuGroupDao menuGroupDao;
 
     @DisplayName("주문을 생성한다.")
     @Test
     void create_success() {
         // given
-        MenuGroup newMenuGroup = menuGroupService.create(new MenuGroup("추천메뉴"));
-        Menu menu = menuService.create(new Menu("후라이드+후라이드",
-                new BigDecimal("19000"),
-                newMenuGroup.getId(),
-                List.of(new MenuProduct(1L, 2))));
-        OrderTable orderTable = tableService.create(new OrderTable());
-        Order order = new Order(orderTable.getId(), List.of(new OrderLineItem(menu.getId(), 1)));
+        MenuGroup newMenuGroup = menuGroupDao.save(createMenuGroup("추천메뉴"));
+        Menu menu = menuDao.save(createMenu("후라이드+후라이드", 19_000L, newMenuGroup.getId(),
+                Collections.singletonList(createMenuProduct(1L, 2))));
+        OrderTable orderTable = tableDao.save(createOrderTable());
+        Order order = createOrder(orderTable.getId(), Collections.singletonList(createOrderLineItem(menu.getId(), 1)));
 
         // when
         Order savedOrder = orderService.create(order);
 
         // then
         Order dbOrder = orderDao.findById(savedOrder.getId())
-                .orElseThrow();
+                .orElseThrow(RuntimeException::new);
         assertThat(dbOrder.getOrderTableId()).isEqualTo(order.getOrderTableId());
     }
 
@@ -63,8 +71,8 @@ class OrderServiceTest {
     @Test
     void create_fail_if_orderLineItems_is_empty() {
         // given
-        OrderTable orderTable = tableService.create(new OrderTable());
-        Order order = new Order(orderTable.getId(), List.of());
+        OrderTable orderTable = tableDao.save(createOrderTable());
+        Order order = createOrder(orderTable.getId(), new ArrayList<>());
 
         // when, then
         assertThatThrownBy(() -> orderService.create(order))
@@ -75,13 +83,8 @@ class OrderServiceTest {
     @Test
     void create_fail_if_not_exist_menu() {
         // given
-        MenuGroup newMenuGroup = menuGroupService.create(new MenuGroup("추천메뉴"));
-        Menu menu = menuService.create(new Menu("후라이드+후라이드",
-                new BigDecimal("19000"),
-                newMenuGroup.getId(),
-                List.of(new MenuProduct(1L, 2))));
-        OrderTable orderTable = tableService.create(new OrderTable());
-        Order order = new Order(orderTable.getId(), List.of(new OrderLineItem(menu.getId() + 1L, 1)));
+        OrderTable orderTable = tableDao.save(new OrderTable());
+        Order order = createOrder(orderTable.getId(), Collections.singletonList(createOrderLineItem(9999999L, 1)));
 
         // when, then
         assertThatThrownBy(() -> orderService.create(order))
@@ -92,13 +95,10 @@ class OrderServiceTest {
     @Test
     void create_fail_if_not_exist_orderTable() {
         // given
-        MenuGroup newMenuGroup = menuGroupService.create(new MenuGroup("추천메뉴"));
-        Menu menu = menuService.create(new Menu("후라이드+후라이드",
-                new BigDecimal("19000"),
-                newMenuGroup.getId(),
-                List.of(new MenuProduct(1L, 2))));
-        OrderTable orderTable = tableService.create(new OrderTable());
-        Order order = new Order(orderTable.getId() + 1L, List.of(new OrderLineItem(menu.getId(), 1)));
+        MenuGroup newMenuGroup = menuGroupDao.save(createMenuGroup("추천메뉴"));
+        Menu menu = menuDao.save(createMenu("후라이드+후라이드", 19_000L, newMenuGroup.getId(),
+                Collections.singletonList(createMenuProduct(1L, 2))));
+        Order order = createOrder(9999999L, Collections.singletonList(createOrderLineItem(menu.getId(), 1)));
 
         // when, then
         assertThatThrownBy(() -> orderService.create(order))
@@ -109,14 +109,12 @@ class OrderServiceTest {
     @Test
     void list_success() {
         // given
-        MenuGroup newMenuGroup = menuGroupService.create(new MenuGroup("추천메뉴"));
-        Menu menu = menuService.create(new Menu("후라이드+후라이드",
-                new BigDecimal("19000"),
-                newMenuGroup.getId(),
-                List.of(new MenuProduct(1L, 2))));
-        OrderTable orderTable = tableService.create(new OrderTable());
-        Order order = new Order(orderTable.getId(), List.of(new OrderLineItem(menu.getId(), 1)));
-        orderService.create(order);
+        MenuGroup newMenuGroup = menuGroupDao.save(createMenuGroup("추천메뉴"));
+        Menu menu = menuDao.save(createMenu("후라이드+후라이드", 19_000L, newMenuGroup.getId(),
+                Collections.singletonList(createMenuProduct(1L, 2))));
+        OrderTable orderTable = tableDao.save(createOrderTable());
+        Order order = orderDao.save(createOrder(orderTable.getId(), OrderStatus.COOKING.name(), LocalDateTime.now(),
+                Collections.singletonList(createOrderLineItem(menu.getId(), 1))));
 
         // when
         List<Order> orders = orderService.list();
