@@ -1,9 +1,16 @@
 package kitchenpos.application;
 
+import static kitchenpos.fixture.OrderTableFixture.createOrderTable;
+import static kitchenpos.fixture.TableGroupFixture.createTableGroup;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.NoSuchElementException;
 import kitchenpos.dao.OrderTableDao;
 import kitchenpos.dao.TableGroupDao;
 import kitchenpos.domain.OrderTable;
@@ -31,17 +38,16 @@ class TableGroupServiceTest {
     @Test
     void create_success() {
         // given
-        OrderTable orderTable1 = orderTableDao.save(new OrderTable(4, true));
-        OrderTable orderTable2 = orderTableDao.save(new OrderTable(4, true));
-        TableGroup tableGroup = new TableGroup(
-                List.of(new OrderTable(orderTable1.getId()), new OrderTable(orderTable2.getId())));
+        OrderTable orderTable1 = orderTableDao.save(createOrderTable(4, true));
+        OrderTable orderTable2 = orderTableDao.save(createOrderTable(4, true));
+        TableGroup tableGroup = createTableGroup(Arrays.asList(orderTable1, orderTable2));
 
         // when
         TableGroup savedTableGroup = tableGroupService.create(tableGroup);
 
         // then
         TableGroup dbTableGroup = tableGroupDao.findById(savedTableGroup.getId())
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
         assertThat(dbTableGroup.getId()).isEqualTo(savedTableGroup.getId());
     }
 
@@ -49,7 +55,7 @@ class TableGroupServiceTest {
     @Test
     void create_fail_if_emptyOrderTable() {
         // given
-        TableGroup tableGroup = new TableGroup(List.of());
+        TableGroup tableGroup = createTableGroup(new ArrayList<>());
 
         // when, then
         assertThatThrownBy(() -> tableGroupService.create(tableGroup))
@@ -61,8 +67,8 @@ class TableGroupServiceTest {
     @Test
     void create_fail_if_orderTable_is_one() {
         // given
-        OrderTable orderTable = orderTableDao.save(new OrderTable(4, true));
-        TableGroup tableGroup = new TableGroup(List.of(orderTable));
+        OrderTable orderTable = orderTableDao.save(createOrderTable(4, true));
+        TableGroup tableGroup = createTableGroup(Collections.singletonList(orderTable));
 
         // when, then
         assertThatThrownBy(() -> tableGroupService.create(tableGroup))
@@ -73,11 +79,10 @@ class TableGroupServiceTest {
     @Test
     void ungroup_success() {
         // given
-        OrderTable orderTable1 = orderTableDao.save(new OrderTable(4, true));
-        OrderTable orderTable2 = orderTableDao.save(new OrderTable(4, true));
-        TableGroup tableGroup = new TableGroup(
-                List.of(new OrderTable(orderTable1.getId()), new OrderTable(orderTable2.getId())));
-        TableGroup savedTableGroup = tableGroupService.create(tableGroup);
+        OrderTable orderTable1 = orderTableDao.save(createOrderTable(4, true));
+        OrderTable orderTable2 = orderTableDao.save(createOrderTable(4, true));
+        TableGroup savedTableGroup = tableGroupDao.save(createTableGroup(
+                LocalDateTime.now(), Arrays.asList(orderTable1, orderTable2)));
 
         // when
         tableGroupService.ungroup(savedTableGroup.getId());
